--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Homework 12</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+    <section class="search-section">
+      <form class="search-form">
+        <input
+          class="search-input"
+          type="text"
+          name="search"
+          placeholder="Search images..."
+        />
+        <button class="search-btn button" type="submit">Search</button>
+      </form>
     </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <section class="gallery-section">
+      <ul class="gallery-list"></ul>
+      <button class="load-btn button visually-hidden" type="button">
+        Load more
+      </button>
+    </section>
+    <script defer src="./main.js" type="module"></script>
   </body>
 </html>
